k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-kube-app
  namespace: my-kube-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-kube-app
  template:
    metadata:
      labels:
        app: my-kube-app
    spec:
      containers:
        - name: my-kube-app
          image: nginx
          ports:
            - containerPort: 80
