k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-kube-app
  namespace: my-kube-namespace
spec:
  selector:
    app: my-kube-app
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
