k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-kube-app-ingress
  namespace: my-kube-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: my-kube-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-kube-app
                port:
                  number: 80
